# codex-elliot

./: LICENSE  README.md  package.json
codex-cli/: package.json
codex-rs/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/core/: Cargo.toml
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/onboarding/: welcome.rs
