[package]
edition = "2024"
name = "savantai-cli"
version = { workspace = true }

[[bin]]
name = "savantai"
path = "src/main.rs"

[lib]
name = "savantai_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
savantai-arg0 = { path = "../arg0" }
savantai-chatgpt = { path = "../chatgpt" }
savantai-common = { path = "../common", features = ["cli"] }
savantai-core = { path = "../core" }
savantai-exec = { path = "../exec" }
savantai-login = { path = "../login" }
savantai-mcp-server = { path = "../mcp-server" }
savantai-protocol = { path = "../protocol" }
savantai-tui = { path = "../tui" }
serde_json = "1"
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
savantai-protocol-ts = { path = "../protocol-ts" }
